finished all html and login

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -37,7 +37,6 @@
             <ul>
                 <li><a href="admin.html"><img src="assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
                 <li><a href="index.html"><img src="assets/icons/login.png" alt="login icon">Logout Admin</a></li>
-                <li><a href="login.html"><img src="assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
     </aside>
@@ -64,11 +63,157 @@
                 </div>
                 
                 <div class="header-notification">
-                    <img src="assets/icons/notification.png" alt="notification icon">
-                    <div class="header-notification-ping"></div>
+                    <a href="announcement.html">
+                        <img src="assets/icons/notification.png" alt="notification icon">
+                        <div class="header-notification-ping"></div>
+                    </a>
                 </div>
+
+                <div class="admin-mode">Admin Mode</div>
             </div>
         </header>
+
+        <main>
+            <div class="admin-container">
+                <div class="admin-un">
+                    <div class="admin-panel-head">
+                        <img src="assets/icons/admin.png" alt="admin icon">
+                        <h4>Admin Panel</h4>
+                    </div>
+
+                    <p>Manage content, view analytics, and configure system settings</p>
+                </div>
+
+                <div class="admin-dos">
+                    <button>
+                        <img src="assets/icons/home.png" alt="home icon">
+                        <p>Dashboard</p>
+                    </button>
+
+                    <button>
+                        <img src="assets/icons/timetable.png" alt="home icon">
+                        <p>Content</p>
+                    </button>
+
+                    <button>
+                        <img src="assets/icons/timetable.png" alt="home icon">
+                        <p>Timetable</p>
+                    </button>
+
+                    <button>
+                        <img src="assets/icons/result.png" alt="home icon">
+                        <p>Results</p>
+                    </button>
+
+                    <button>
+                        <img src="assets/icons/people.png" alt="home icon">
+                        <p>Analytics</p>
+                    </button>
+
+                    <button>
+                        <img src="assets/icons/admin.png" alt="home icon">
+                        <p>Settings</p>
+                    </button>
+                </div>
+
+                <div class="admin-trois">
+                    <h4>Admin Dashboard<h4>
+                    <p>Overview of system activity and quick actions</p>
+                </div>
+
+                <div class="admin-quatre">
+                    <div class="admin-dashbox">
+                        <img src="assets/icons/notification.png" alt="notification icon">
+                        <span>23</span>
+                        <p>Active Announcements</p>
+                    </div>
+
+                    <div class="admin-dashbox">
+                        <img src="assets/icons/calendar-green.png" alt="calendar icon">
+                        <span>8</span>
+                        <p>Upcoming Events</p>
+                    </div>
+
+                    <div class="admin-dashbox">
+                        <img src="assets/icons/timetable.png" alt="timetable icon">
+                        <span>12</span>
+                        <p>Active Courses</p>
+                    </div>
+
+                    <div class="admin-dashbox">
+                        <img src="assets/icons/people.png" alt="people icon">
+                        <span>456</span>
+                        <p>Total Students</p>
+                    </div>
+                </div>
+
+                <div class="admin-cinq">
+                    <div class="admin-dashbox-2">
+                        <h4>Quick Actions</h4>
+                        <div class="admin-quick-actions">
+                            <div class="first-div">
+                                <img src="assets/icons/plus.png" alt="plus icon">
+                                <p>Create announcement</p>
+                            </div>
+                            <div class="second-div">
+                                <img src="assets/icons/timetable.png" alt="timetable icon">
+                                <p>Update Timetable</p>
+                            </div>
+                            <div class="third-div">
+                                <img src="assets/icons/result.png" alt="result icon">
+                                <p>Add Results</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="admin-dashbox-2">
+                        <h4>Recent Acitvity</h4>
+                        <div>
+                            <div class="activity">
+                                <div class="green-dot"></div>
+                                <div class="activity-details">
+                                    <p class="bold-text">New announcement published</p>
+                                    <p class="feint-text">2 mins ago</p>
+                                </div>
+                            </div>
+                            <div class="activity">
+                                <div class="green-dot"></div>
+                                <div class="activity-details">
+                                    <p class="bold-text">Timetable updated for CSC203</p>
+                                    <p class="feint-text">1 hour ago</p>
+                                </div>
+                            </div>
+                            <div class="activity">
+                                <div class="green-dot"></div>
+                                <div class="activity-details">
+                                    <p class="bold-text">Results published for CSC201</p>
+                                    <p class="feint-text">3 hours ago</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+
+                    <div class="admin-dashbox-2">
+                        <h4>System Status</h4>
+                        <div class="system-stats">
+                            <div class="database-status">
+                                <p>Database</p>
+                                <div>Online</div>
+                            </div>
+                            <div class="email-status">
+                                <p>Email Service</p>
+                                <div>Active</div>
+                            </div>
+                            <div class="backup-status">
+                                <p>Backup Status</p>
+                                <div>Last: 2 hours ago</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <footer>
             <p>&copy; 2025 G12Schools • School Imformation Board • All rights reserved.</p>
