--- a/frontend/announcement.html
+++ b/frontend/announcement.html
@@ -35,8 +35,6 @@
 
         <div class="sidebar-bottom">
             <ul>
-                <li><a href="admin.html"><img src="assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
-                <li><a href="index.html"><img src="assets/icons/login.png" alt="login icon">Logout Admin</a></li>
                 <li><a href="login.html"><img src="assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
@@ -64,8 +62,10 @@
                 </div>
                 
                 <div class="header-notification">
-                    <img src="assets/icons/notification.png" alt="notification icon">
-                    <div class="header-notification-ping"></div>
+                    <a href="announcement.html">
+                        <img src="assets/icons/notification.png" alt="notification icon">
+                        <div class="header-notification-ping"></div>
+                    </a>
                 </div>
             </div>
         </header>
