--- a/frontend/events.html
+++ b/frontend/events.html
@@ -35,8 +35,6 @@
 
         <div class="sidebar-bottom">
             <ul>
-                <li><a href="admin.html"><img src="assets/icons/admin.png" alt="admin icon">Admin Panel</a></li>
-                <li><a href="index.html"><img src="assets/icons/login.png" alt="login icon">Logout Admin</a></li>
                 <li><a href="login.html"><img src="assets/icons/login.png" alt="login icon">Admin Login</a></li>
             </ul>
         </div>
@@ -64,180 +62,53 @@
                 </div>
                 
                 <div class="header-notification">
-                    <img src="assets/icons/notification.png" alt="notification icon">
-                    <div class="header-notification-ping"></div>
+                    <a href="announcement.html">
+                        <img src="assets/icons/notification.png" alt="notification icon">
+                        <div class="header-notification-ping"></div>
+                    </a>
                 </div>
             </div>
         </header>
 
         <main>
-            <div class="event-calendar-head">
-                <div class="event-calendar-details">
-                    <div class="event-calendar-title">
-                        <img src="" alt="events icon">
-                        <h3>Event Calendar</h3>
+            <div class="event-calendar-container">
+                <div class="event-calendar-head">
+                    <div class="event-calendar-details">
+                        <div class="event-calendar-title">
+                            <img src="assets/icons/calendar.png" alt="events icon">
+                            <h4>Event Calendar</h4>
+                        </div>
+                        <p>Departmental events, deadlines, and important dates</p>
                     </div>
-                    <p>Departmental events, deadlines, and important dates</p>
-                </div>
 
-                <div class="event-month-list-toggle">
-                    <button>Month</button>
-                    <button>List</button>
-                </div>
-            </div>
-
-            <div class="event-calendar">
-                <div class="event-navigate-month">
-                    <div class="event-previous-month-div">
-                        <img src="" alt="previous month">
-                    </div>
-                    <h3>October 2025</h3>
-                    <div class="event-next-month-div">
-                        <img src="" alt="next month">
+                    <div class="event-month-list-toggle">
+                        <button>Month</button>
+                        <button>List</button>
                     </div>
                 </div>
 
-                <div class="event-calendar-grid">
-                    <div class="">Sun</div>
-                    <div class="">Mon</div>
-                    <div class="">Tue</div>
-                    <div class="">Wed</div>
-                    <div class="">Thu</div>
-                    <div class="">Fri</div>
-                    <div class="">Sat</div>
-                    <div class=""></div>
-                    <div class=""></div>
-                    <div class=""></div>
-                    <div class="">
-                        <div class="">1</div>
-                        <div class="">
-                            <div class="">Project Submission Deadline</div>
-                        </div>
+                <div class="calendar-container">
+                    <div class="calendar-header">
+                        <button id="prev-month">
+                            <img src="assets/icons/left.png" alt="previous month">
+                        </button>
+                        <h2 id="month-year"></h2>
+                        <button id="next-month">
+                            <img src="assets/icons/right.png" alt="next month">
+                        </button>
                     </div>
-                    <div class="">
-                        <div class="">2</div>
-                        <div class=""></div>
+
+                    <div class="calendar-days">
+                        <div class="day-name">Sun</div>
+                        <div class="day-name">Mon</div>
+                        <div class="day-name">Tue</div>
+                        <div class="day-name">Wed</div>
+                        <div class="day-name">Thu</div>
+                        <div class="day-name">Fri</div>
+                        <div class="day-name">Sat</div>
                     </div>
-                    <div class="">
-                        <div class="">3</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">4</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">5</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">6</div>
-                        <div class="">
-                            <div class="">Guest Lecture: AI Ethics</div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="">7</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">8</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">9</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">10</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">11</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">12</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">13</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">14</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">15</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">16</div>
-                        <div class="">
-                            <div class="">Departmental Dues Payment</div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <div class="">17</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">18</div>
-                        <div class=""></div>
-                    </div>
-                    <div class=" ">
-                        <div class="">19</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">20</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">21</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">22</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">23</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">24</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">25</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">26</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">27</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">28</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">29</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">30</div>
-                        <div class=""></div>
-                    </div>
-                    <div class="">
-                        <div class="">31</div>
-                        <div class=""></div>
-                    </div>
+
+                    <div class="calendar-grid" id="calendar-grid"></div>
                 </div>
             </div>
         </main>
@@ -246,6 +117,7 @@
             <p>&copy; 2025 G12Schools • School Information Board • All rights reserved.</p>
         </footer>
     </div>
+
 
     <script>
         const menuIcon = document.getElementById('menu-icon');
@@ -263,6 +135,90 @@
             sidebarActive.classList.remove('shift');
         }
         });
+
+
+        const calendarGrid = document.getElementById('calendar-grid');
+        const monthYear = document.getElementById('month-year');
+        const prevMonthBtn = document.getElementById('prev-month');
+        const nextMonthBtn = document.getElementById('next-month');
+
+        let date = new Date();
+        let currentMonth = date.getMonth();
+        let currentYear = date.getFullYear();
+
+        // Example events
+        const events = {
+        "2025-10-01": "Project Submission Deadline",
+        "2025-10-06": "Guest Lecture: AI Ethics",
+        "2025-10-16": "Departmental Dues Payment",
+        };
+
+        function renderCalendar(month, year) {
+        calendarGrid.innerHTML = "";
+
+        const firstDay = new Date(year, month, 1).getDay();
+        const daysInMonth = new Date(year, month + 1, 0).getDate();
+
+        const monthNames = [
+            "January", "February", "March", "April", "May", "June",
+            "July", "August", "September", "October", "November", "December"
+        ];
+
+        monthYear.textContent = `${monthNames[month]} ${year}`;
+
+        // Empty cells before the first day
+        for (let i = 0; i < firstDay; i++) {
+            const emptyCell = document.createElement('div');
+            calendarGrid.appendChild(emptyCell);
+        }
+
+        // Add days
+        for (let day = 1; day <= daysInMonth; day++) {
+            const dayCell = document.createElement('div');
+            dayCell.classList.add('day');
+            dayCell.textContent = day;
+
+            // Highlight today
+            const isToday =
+            day === date.getDate() &&
+            month === date.getMonth() &&
+            year === date.getFullYear();
+
+            if (isToday) dayCell.classList.add('today');
+
+            // Add event if exists
+            const eventKey = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+            if (events[eventKey]) {
+            const eventDiv = document.createElement('div');
+            eventDiv.classList.add('event');
+            eventDiv.textContent = events[eventKey];
+            dayCell.appendChild(eventDiv);
+            }
+
+            calendarGrid.appendChild(dayCell);
+        }
+        }
+
+        prevMonthBtn.addEventListener('click', () => {
+        currentMonth--;
+        if (currentMonth < 0) {
+            currentMonth = 11;
+            currentYear--;
+        }
+        renderCalendar(currentMonth, currentYear);
+        });
+
+        nextMonthBtn.addEventListener('click', () => {
+        currentMonth++;
+        if (currentMonth > 11) {
+            currentMonth = 0;
+            currentYear++;
+        }
+        renderCalendar(currentMonth, currentYear);
+        });
+
+        renderCalendar(currentMonth, currentYear);
+
 
     </script>
 </body>
